--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,12 @@ p {
   justify-content: center;
   margin-top: 50px;
 }
+
+.attribution a {
+  text-decoration: none;
+  color: black;
+}
+.attribution a:hover {
+  text-decoration: underline;
+  color: hsl(218, 44%, 22%);
+}
